    - TinyMCE Math plugin: Allow inline formulas (LaTeX code). (#651)
    - TinyMCE syntax highlighting options: Error handling (wrong values in the "Line highlight" field).
    - Licenses help links (Creative Commons) in some TinyMCE plugins and the Properties tab. (#649)
    - Responsive tables. Use "exe-table exe-table-responsive" or "exe-table-minimalist exe-table-responsive" CSS classes.
    
  * Pablo Amaya
    - New export option: "Export current page as SCORM". (#643)
    - Old "Add Previous/Next links within SCOs" export option removed. (#658)
    
  * Ricardo Nutz
    - Access to NTFS partitions with SNAP version.
    
  * APSL
    - Package building.
    
  * Juan Rafael Fernández
    - String extraction process revision.
    - Translations coordination.  
    - PO/msgfmt and string errors fixed.

  * eXeLearning.net Translation Team
    - New complete Spanish translation, by Juan Rafael Fernández.
    - New complete Catalan translation, by Carles Ferrando Garcia.
    - New complete Greek translation, by Yannis Kaskamanidis.
    - New complete Polish translation, by Waldemar Stoczkowski.
    - New complete Turkish translation, by Turkish transifex team.

intef-exe (3:2.7) lucid; urgency=medium

  * Manuel Narváez
    - New "TriviExt" Game iDevice.
    - New "Map" Game iDevice.
    - Full Game iDevices revision and compatibility with the latest MathJax version.
    - srt Subtitles in local videos.
    - GeoGebra iDevice: Author link in new window.

  * Ignacio Gros
    - New node contextual menu options: Add, rename, delete. (#609)
    - iDevice editor: Show information about iDevice being deleted. (#608)
    - UDL Content iDevice: Scroll to the content (main or alternative).
    - No default content templates in the new version.
    - Avoid HTML code in the server errors messages.
    - Fixed: Full-screen videos in PrettyPhoto. (#592)
    - Fixed: Video player: Autoplay + Muted. (#604)