@@ -35,6 +35,7 @@ intef-exe (3:2.8) lucid; urgency=medium
     - TinyMCE syntax highlighting options: Error handling (wrong values in the "Line highlight" field).
     - Licenses help links (Creative Commons) in some TinyMCE plugins and the Properties tab. (#649)
     - Responsive tables. Use "exe-table exe-table-responsive" or "exe-table-minimalist exe-table-responsive" CSS classes.
+    - Presentation style: Presentation remotes (wireless presenters) compatibility. (#658)
     
   * Pablo Amaya
     - New export option: "Export current page as SCORM". (#643)
